--- a/src/assets/css/statistics.css
+++ b/src/assets/css/statistics.css
@@ -159,3 +159,9 @@ from {transform: rotate(0deg);}
 to {transform: rotate(-359deg);}
 }
 
+
+.dv-capsule-chart .label-column div {
+  height: 20px;
+  line-height: 20px;
+  color: #f0f0f0;
+}
